docs/original_moodle/unidades/entregas/muestra/1/Tarea 1 - Ejercicio 8  - Casa de Cambio Tio Rico VPL/VARGAS JAUREGUI GENESIS DANIELA 2538/2019-08-20-09-22-11.ceg/compilation.txt
CasaDeCambio.java:79: error: ')' expected
        puedeComprar = (cantidad * this.precioDeCompra <= this.pesosEnCaja;
                                                                          ^
1 error
Not compiled
